--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mini-player-music",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "Mini player music",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "marcelo_gomj",
+  "homepage": "",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "upd": "tsc ./src/preload/Services/Metadata.ts --target esnext && node ./src/preload/Services/Metadata.js",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
