--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,7 @@
   "include": ["electron.vite.config.*", "src/main/*", "src/preload/*", "src/preload/**/*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["electron-vite/node"]
-  }
+    "types": ["electron-vite/node"],
+    "target": "ES2022"
+  },
 }
