--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -10,6 +10,7 @@
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "target": "ES2022",
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
